<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.emefar.tmdb.ui.login.LoginViewModel" />


    </data>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ic_director"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/ic_director" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ic_director"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/the_movie_manager"
            android:textColor="@color/white"
            android:textSize="22sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/login_with_email"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/edittext_shape"
                android:hint="@string/email"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@={viewModel.emailField}"
                android:singleLine="true"
                android:textColorHint="@color/hintColor"
                android:textSize="15sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/edittext_shape"
                android:hint="@string/password"
                android:paddingStart="10dp"
                android:text="@={viewModel.passField}"
                android:inputType="textPassword"
                android:paddingEnd="10dp"
                android:singleLine="true"
                android:textColorHint="@color/hintColor"
                android:textSize="15sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:onClick="@{viewModel.loginClick}"
                android:background="@drawable/button_shape"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white" />


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/or"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:onClick="@{viewModel.loginWebsiteClick}"
                android:background="@drawable/button_shape"
                android:text="@string/login_web"
                android:textAllCaps="false"
                android:textColor="@color/white" />


        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/copyright"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </RelativeLayout>

</layout>